# eyetagger

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  app.json  backups.sh  compose.yaml  db_backup.sh  deploy.sh  docker-compose.yaml  images.dvc  manage.py  package.json  pyproject.toml  update_deploy.sh  vue.config.js
.dvc/: config
backend/: urls.py  wsgi.py
backend/api/: apps.py  manual_migration.py  models.py  permissions.py  views.py
backend/api/migrations/: 0002_auto_20200519_2239.py  0002_image.py  0003_auto_20200513_0210.py  0003_profile.py  0004_auto_20200513_0053.py  0005_auto_20200513_0233.py
backend/api/migrations_bkp/: 0001_initial.py
backend/dataset/: .gitignore  .original.dvc  annotations.dvc  metadata.csv.dvc  tiff2png.sh.dvc
backend/settings/: .env.example  base.py  deploy.sh  dev.py  prod.py
deploy/: db_creation.sh  db_creation.sql  default  gunicorn.service  gunicorn.service.root  init-letsencrypt.sh
deploy/nginx/: nginx.conf  nginx.conf.prod
deploy/scripts/: deploy.sh  install.sh  update_deploy.sh
env/: .gitignore  django_app.env.example  django_db.env.example
nginx/: nginx.conf
public/: index.html
scripts/: install-and-run.sh
src/: App.vue  main.js  router.js
src/components/: Annotation.vue  Canvas.vue  Home.vue  Login.vue  Rest.vue  ThankYou.vue  Visualization.vue
src/services/: annotator.js  api.js  imageService.js  messageService.js
src/store/: index.js
src/store/modules/: auth.js  images.js  messages.js  toasts.js
