[project]
    dependencies = [
        "applicationinsights>=0.11.10",
        "dj-database-url>=2.2.0",
        "django>=5.1.1",
        "django-environ>=0.11.2",
        "django-rest-knox>=5.0.1",
        "djangorestframework>=3.15.2",
        "gunicorn>=23.0.0",
        "pandas>=2.2.2",
        "psycopg2-binary>=2.9.9",
        "whitenoise>=6.7.0",
        "yapf>=0.40.2",
        "djoser>=2.2.3",
        "django-extensions>=3.2.3",
        "google-cloud-storage>=2.18.2",
        "django-cors-headers>=4.4.0",
        "dvc>=3.55.2",
    ]
    description = "Add your description here"
    name = "eyetagger"
    readme = "README.md"
    requires-python = ">=3.12"
    version = "0.1.0"
